------------------------------------------------------------------------------
  pracma                                                                NEWS
------------------------------------------------------------------------------


CHANGES IN VERSION 1.4.8 (2013-06-09)

    o findzeros() now finds 'quadratic' roots, too.

CHANGES IN VERSION 1.4.7 (2013-05-20)

    o histcc() histogram with optimized number of bins.
    o Example of correction term for the trapz() integration.

CHANGES IN VERSION 1.4.6 (2013-03-31)

    o psi() Psi polygamma function (Matlab style).
    o rosenbrock() and rastrigin() functions removed.

CHANGES IN VERSION 1.4.5 (2013-03-21)

    o quadcc() new, iterative Clenshaw-Curtis quadrature.
    o squareform() formats distance matrix (Matlab style).

CHANGES IN VERSION 1.4.4 (2013-03-12)

    o integral2() implements the two-dimensional numerical integration
      approach `TwoD', i.e. Gauss-Kronrod (3, 7)-points on rectangles.
    o integral3() three-dimensional integration based on integral2().
    o triplequad() 3-dim. integration based on dblquad() (Matlab style).

CHANGES IN VERSION 1.4.3 (2013-03-10)

    o integral() combines adaptive numerical integration procedures.
    o cintegral() complex line integrals (rectangles and curves).

CHANGES IN VERSION 1.4.2 (2013-03-03)

    o linprog() linear programming solver for linear equality and
      inequality constraints.

CHANGES IN VERSION 1.4.1 (2013-02-20)

   o romberg() Romberg integration completely rewritten.
   o idivide() integer division with different roundings.

CHANGES IN VERSION 1.4.0 (2013-02-10)

    o fderiv(), taylor() expanded to higher orders.
    o itersolve() iteration methods for solving linear systems.
    o lu() LU decomposition with different schemes (w/o pivoting).

CHANGES IN VERSION 1.3.9 (2013-01-26)

    o pdist() as an alias for distmat() (Matlab style).
    o fftshift(), ifftshift() shifting Fourier frequencies.