@@ -2,7 +2,7 @@ Package: pracma
 Type: Package
 Title: Practical Numerical Math Functions
 Version: 1.4.8
-Date: 2013-06-09
+Date: 2013-06-14
 Author: Hans W Borchers
 Maintainer: HwB <hwborchers@googlemail.com>
 Depends: R (>= 2.11.1)
