@@ -27,8 +27,9 @@ matlab <- function() {
   magic, meshgrid, mkpp, mldivide, mod, mrdivide,
   nchoosek, ndims, nextpow2, nnz, normest, nthroot, null, num2str, numel,
   ode23, ones, or, orth,
-  pascal, pchip, pdist, peaks, perms, piecewise, pinv, plotyy, pol2cart,
-      polar, polyfit, polyint, polylog, polyval, pow2, ppval, primes, psi, pwd,
+  pascal, pchip, pdist, pdist2, peaks, perms, piecewise, pinv, plotyy,
+      pol2cart,polar, polyfit, polyint, polylog, polyval, pow2, ppval,
+      primes, psi, pwd,
   quad, quad2d, quadgk, quadl, quadprog, quadv, quiver,
   rad2deg, randi, randn, randsample, rat, rats, regexp, regexpi, regexpreg,
       rem, repmat, roots, rosser, rot90, rref, runge,
